feat: adicionar animações e funcionalidades ao carrosel

--- a/css/dashboard_inatel.css
+++ b/css/dashboard_inatel.css
@@ -219,27 +219,25 @@ main {
     flex-direction: column;
     align-items: center;
     position: relative;
+    overflow: hidden;
 }
 
 .carousel {
     width: 100%;
-    overflow: hidden;
     border-radius: 8px;
     margin-bottom: 15px;
-
     display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .carousel-item {
-    width: 90%;
+    min-width: 100%;
     display: flex;
     flex-direction: column;
     padding: 15px;
     border: 2px solid var(--normal-border-color);
     border-radius: 8px;
     background-color: var(--background-color);
+    box-sizing: border-box;
 }
 
 .carousel-item img {
