--- a/css/dashboard_inatel.css
+++ b/css/dashboard_inatel.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap');
 
+@keyframes leftToRightFade {
+    from {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 :root {
     --primary-color: #0487d9;
     --secondary-color: #0367a6;
@@ -60,6 +71,11 @@ body {
 
 main {
     padding: 15px;
+
+    animation-name: leftToRightFade;
+    animation-duration: 0.9s;
+    animation-fill-mode: both;
+    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hidden-menu {
@@ -105,12 +121,11 @@ main {
 .header-container {
     display: flex;
     justify-content: space-between;
-    width: 90%;
-    max-width: 400px;
+    width: 100%;
 }
 
 .icon, .logo {
-    padding: 10px;
+    padding: 5px;
     background-color: var(--primary-color);
     border-radius: 5px;
 
@@ -118,7 +133,7 @@ main {
     cursor: pointer;
 
     display: flex;
-    align-items: center;
+    align-items: start;
 }
 
 .icon span {
@@ -180,6 +195,7 @@ main {
 
     padding: 15px;
     margin-bottom: 15px;
+
 }
 
 .class-container {
