--- a/css/dashboard_inatel.css
+++ b/css/dashboard_inatel.css
@@ -309,6 +309,73 @@ main {
     background-color: var(--secondary-color);
 }
 
+.custom-menu-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+
+.custom-menu-overlay.show {
+    display: flex;
+}
+
+.custom-menu {
+    background-color: var(--background-color);
+    border: 2px solid var(--normal-border-color);
+    border-radius: 8px;
+    padding: 15px;
+    width: 80%;
+    max-width: 600px;
+    max-height: 90vh;
+    overflow-y: auto;
+    position: relative;
+}
+
+.custom-menu-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.custom-menu-title {
+    font-size: 1.5em;
+    color: var(--secondary-color);
+}
+
+.custom-menu-close {
+    cursor: pointer;
+    color: var(--secondary-color);
+}
+
+.custom-menu-content {
+    max-height: 70vh;
+    overflow-y: auto;
+}
+
+.custom-menu-item {
+    padding: 10px;
+    border-radius: 5px;
+    background-color: var(--primary-color);
+    color: var(--background-color);
+    margin: 5px 0;
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+}
+
+.custom-menu-item:hover {
+    background-color: var(--secondary-color);
+}
+
 /* Mobile responsiveness */
 @media (max-width: 768px) {
     .carousel-item {
@@ -327,5 +394,17 @@ main {
     }
     .class-cards {
         flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 600px) {
+    .custom-menu {
+        max-height: 98vh;
+        overflow-y: auto;
+    }
+    .custom-menu-overlay {
+        align-items: flex-start;
+        justify-content: center;
+        padding-top: 0;
     }
 }
