--- a/css/dashboard_inatel.css
+++ b/css/dashboard_inatel.css
@@ -65,8 +65,8 @@ html[data-theme="dark"] {
 body {
     margin: 0;
     padding: 0;
-    background-color: var(--background-color);
     color: var(--text-color);
+    background-color: var(--background-color);
 }
 
 main {
@@ -336,6 +336,8 @@ main {
     max-height: 90vh;
     overflow-y: auto;
     position: relative;
+    background: var(--background-color, #222);
+    color: var(--text-color, #fff);
 }
 
 .custom-menu-header {
